modules/vpc/main.tf
# VPC

resource "aws_vpc" "main" {

  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true


  tags = {
    Name        = "${var.environment}-vpc"
    Environment = var.environment
  }
}


# Internet Gateway

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main.id


  tags = {
    Name = "${var.environment}-igw"
  }
}


# Public Subnets

resource "aws_subnet" "public" {

  count = length(var.public_subnet_cidrs)

  vpc_id = aws_vpc.main.id

  cidr_block = var.public_subnet_cidrs[count.index]

  availability_zone = var.azs[count.index]

  map_public_ip_on_launch = true


  tags = {
    Name = "${var.environment}-public-${count.index + 1}"

    "kubernetes.io/role/elb" = "1"
  }
}


# Private Subnets

resource "aws_subnet" "private" {

  count = length(var.private_subnet_cidrs)

  vpc_id = aws_vpc.main.id

  cidr_block = var.private_subnet_cidrs[count.index]

  availability_zone = var.azs[count.index]


  tags = {
    Name = "${var.environment}-private-${count.index + 1}"

    "kubernetes.io/role/internal-elb" = "1"
  }
}



# Elastic IP for NAT

resource "aws_eip" "nat" {

  domain = "vpc"

  tags = {
    Name = "${var.environment}-nat-eip"
  }
}



# NAT Gateway

resource "aws_nat_gateway" "nat" {

  allocation_id = aws_eip.nat.id

  subnet_id = aws_subnet.public[0].id


  depends_on = [
    aws_internet_gateway.igw
  ]


  tags = {
    Name = "${var.environment}-nat"
  }
}



# Public Route Table

resource "aws_route_table" "public" {


 vpc_id = aws_vpc.main.id


 route {

 cidr_block = "0.0.0.0/0"

 gateway_id = aws_internet_gateway.igw.id

 }


 tags = {
 Name = "${var.environment}-public-rt"
 }

}



resource "aws_route_table_association" "public" {

count = length(aws_subnet.public)


subnet_id = aws_subnet.public[count.index].id


route_table_id = aws_route_table.public.id

}



# Private Route Table


resource "aws_route_table" "private" {


vpc_id = aws_vpc.main.id


route {

cidr_block = "0.0.0.0/0"

nat_gateway_id = aws_nat_gateway.nat.id

}


tags = {

Name = "${var.environment}-private-rt"

}

}



resource "aws_route_table_association" "private" {

count = length(aws_subnet.private)


subnet_id = aws_subnet.private[count.index].id


route_table_id = aws_route_table.private.id

}
